yaml-File/svc-pro.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-08-19T09:07:47Z"
  labels:
    app: kube-prometheus-stack-operator
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 48.3.1
    chart: kube-prometheus-stack-48.3.1
    heritage: Helm
    release: prometheus
  name: prometheus-kube-prometheus-operator
  namespace: default
  resourceVersion: "33998"
  uid: 8d927c71-bb21-46ad-8951-f590bface399
spec:
  clusterIP: 172.20.35.128
  clusterIPs:
  - 172.20.35.128
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app: kube-prometheus-stack-operator
    release: prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
